--- a/listy.html
+++ b/listy.html
@@ -46,11 +46,11 @@
 		element.className = "listy";
 		var listyItems = document.getElementsByClassName("listy");
 		
-if(listyItems.length>9){
-	for(let i=0;i<listyItems.length;i++){
-		if(element.innerHTML==listyItems[i]){
-			listyItems[i].remove();
-			console.log("Removing duplicate element"+ listyItems[i]);
+if(listyItems.length>8){
+	for(let listyItem of listyItems){
+		if(element.innerHTML==listyItem){
+			listyItem.remove();
+			console.log("Removing duplicate element"+ listyItem);
 		}
 		else{
 			listyItems[0].remove();
